# compare-file

./: .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: layout_example_rdw_strip.json  layout_example_segment_alias.json  layout_file_A.json  layout_file_B.json  normalization.json  runtime.json  segments.example-rdw.json  segments.json
docs/: architecture.md  decisions.md  how-it-works.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-7.md  phase-plan.md  session-log.md
docs/benchmarks/: phase-2.md
examples/: README.md
scripts/: inject_alias_segments.py
src/segment_compare/: __init__.py  __main__.py  comparator.py  config.py  external_sort.py  hasher.py  layout.py  merger.py  normalizer.py  parser.py  partitioner.py  pipeline.py  worker.py  writer.py
src/segment_compare/api/: __init__.py  db.py  main.py  models.py  routes.py  storage.py
tests/: _helpers.py  synthetic_data.py  test_api_dashboard.py  test_api_db.py  test_api_storage.py  test_comparator.py  test_config.py  test_external_sort.py  test_field_config.py  test_field_integration.py  test_field_normalizer.py  test_hasher.py  test_layout.py  test_main.py  test_merger.py  test_normalizer.py  test_parallel.py  test_parser.py  test_partitioner.py  test_pipeline.py  test_synthetic_data.py  test_writer.py
ui/: .env  README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  main.js  style.css
ui/src/components/: AliasSegmentEditor.vue  AppBar.vue  AppSidebar.vue  CompareKeyPanel.vue  FieldConfig.vue  FileBody.vue  FileBrowserDialog.vue  FilePathHeader.vue  PrefixConfig.vue  ResultsView.vue  RunHistoryView.vue  RunResultDialog.vue  RunResultPanel.vue  SegmentEditor.vue  SidePanel.vue
ui/src/composables/: layout.js  run.js  theme.js
ui/src/services/: api.js
ui2/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ui2/app/: globals.css  layout.tsx
ui2/app/comparator/: page.tsx
ui2/app/config/: page.tsx
ui2/app/dashboard/: page.tsx
ui2/app/history/: page.tsx
ui2/components/: app-sidebar.tsx  page-header.tsx  theme-toggle.tsx
ui2/components/comparator/: byte-ruler.tsx  file-browser-dialog.tsx  run-result.tsx  (+1 more)
ui2/lib/: api.ts  editor.ts  types.ts  utils.ts
(+10 files in other folders)
