[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segment-compare"
version = "0.0.1"
description = "Compare two fixed-format segment-based data files at scale."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Segment Compare Maintainers" },
]
keywords = ["comparison", "fixed-format", "reconciliation", "segments"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
# Phase 1 is stdlib-only. Runtime dependencies arrive in later phases:
#   Phase 3: fastapi, uvicorn[standard]
#   Phase 4: nothing new (mailx is invoked as a subprocess)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "flake8>=7.0",
    "flake8-bugbear>=24.0",
    "mypy>=1.8",
]

[project.scripts]
segment-compare = "segment_compare.__main__:main"

[project.urls]
Documentation = "./docs/architecture.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
segment_compare = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["segment_compare"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
